footer overflow responsive fix

--- a/style.css
+++ b/style.css
@@ -100,6 +100,14 @@ body {
 .footer-link-list {
     list-style: none;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    margin: 4rem auto;
+    align-items: center;
+    margin: 3rem auto;
+}
+
+@media screen and (min-width: 768px) {
+    .footer-link-list {
+        flex-direction: row;
+    }
 }
